<resources>
    <string name="app_name">GBridge Etners</string>

    <!-- 로그인  -->
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="login_title">로그인</string>
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login_id_hint">사번을 입력하세요</string>
    <string name="login_pw_hint">비밀번호를 입력하세요</string>
    <string name="login_check">아이디와 비밀번호를 확인하세요</string>

    <!-- 바텀 네비게이션 메뉴 -->
    <string name="bnav_home">홈</string>
    <string name="bnav_list">근태기록</string>
    <string name="bnav_setting">설정</string>

    <!-- 회원가입 -->
    <string name="signup_id">사원번호</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_check">비밀번호 재확인</string>
    <string name="signup_pw_check">비밀번호를 한번 더 입력하세요</string>
    <string name="signup_department">부서</string>
    <string name="signup_department_hint">부서를 입력하세요</string>
    <string name="signup_name">이름</string>
    <string name="signup_name_hint">이름을 입력하세요</string>
    <string name="signup_buttonText">회원가입</string>
    <string name="signup_toast_idLengthFail">알맞은 사원번호 형식이 아닙니다.</string>
    <string name="signup_toast_pwCheckFail">비밀번호와 비밀번호 재확인이 서로 다릅니다.</string>
    <string name="signup_toast_pwLengthFail">비밀번호는 6자리 이상이여야 합니다.</string>
    <string name="signup_toast_success">회원가입이 완료되었습니다. 다시 로그인 해 주세요.</string>

    <!-- 근무일정 -->
    <string name="list_title">근무일정</string>

    <!--  설정  -->
    <string name="setting_title">회원정보 및 설정</string>

    <!-- *****************************************************************************************
                                           Admin 관련 String
    *******************************************************************************************-->
    <!-- Admin 레이아웃별 제목 -->
    <string name="admin_home_title">관리자 메뉴</string>
    <string name="admin_employee_attendance_management_title">사원별 근태 관리</string>
    <string name="admin_daily_attendance_report_title">근태 현황 리포트</string>
    <string name="admin_company_location_management">출퇴근 위치 등록</string>

    <!-- Admin Home -->
    <string name="admin_home_menu_attendance_management_title">근무 관리</string>
    <string name="admin_home_menu_attendance_report_title">근무 기록</string>
    <string name="admin_home_menu_company_management">회사 관리</string>


    <!-- Admin Employee Attendance Management -->
    <string name="menu_item_employee_attendance_management_edit">근태 관리</string>
    <string name="text_option_menu">⋮</string>
    <string name="dialog_attendance_management_title_text">일정 제목</string>
    <string name="dialog_attendance_management_title_hint">제목을 작성해주세요.</string>
    <string name="dialog_attendance_management_description_text">일정 설명</string>
    <string name="dialog_attendance_management_description_hint">설명을 작성해주세요.</string>
    <string name="dialog_attendance_management_start_date_text">시작 일자</string>
    <string name="dialog_attendance_management_end_date_text">종료 일자</string>
    <string name="dialog_attendance_management_date_hint">yy-MM-dd</string>
    <string name="dialog_attendance_management_start_time_text">시작 시간</string>
    <string name="dialog_attendance_management_end_time_text">종료 시간</string>
    <string name="dialog_attendance_management_time_hint">HH:mm</string>
    <string name="item_employee_attendance_management_time">근무시간 : </string>
    <string name="item_employee_attendance_management_date">근무기간 : </string>
    <string name="item_employee_attendance_management_time_or_date_divider">~</string>

    <string name="item_empty_data">서버에 등록된 정보가 없습니다.</string>

    <string name="hello_blank_fragment">임시</string>
</resources>
